# database_audit

./: .gitignore  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_REVIEW.md  LICENSE  MIGRATION_GUIDE.md  README.md  audit.py  audit_config.yaml  main.py  pyproject.toml  requirements-test.txt  requirements.txt
.claude/: CLAUDE.md
audit_env/: pyvenv.cfg
audit_results/: audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json
audit_results/audit_run_20251009_170927/: audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json
audit_results/audit_run_20251020_191408/: audit_dim_station.html  audit_dim_station.json  audit_dtm_station_distance.csv  audit_dtm_station_distance.html  audit_dtm_station_distance.json  audit_dtm_station_distance_summary.csv  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json  audit_fct_avaibility_summary.csv
audit_results/audit_run_20251020_192238/: audit_dim_station.html  audit_dim_station.json  audit_dtm_station_distance.csv  audit_dtm_station_distance.html  audit_dtm_station_distance.json  audit_dtm_station_distance_summary.csv  audit_fct_avaibility.csv  audit_fct_avaibility.html  audit_fct_avaibility.json
audit_results/audit_run_20251020_193132/: audit_dim_station.html  audit_dim_station.json  audit_dtm_station_distance.csv  audit_dtm_station_distance.html  audit_dtm_station_distance.json  audit_dtm_station_distance_summary.csv  audit_fct_avaibility.csv  (+2 more)
dw_auditor/: __init__.py  __main__.py
dw_auditor.egg-info/: PKG-INFO  requires.txt
tests/: conftest.py
(+561 files in other folders)
